--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 PORT=
 DATABASE_URL=
-
+NATS_SERVERS=
 # Variables para el Acceso a Otros Microservicios
-PRODUCTS_MS_HOST=
-PRODUCTS_MS_PORT=
+# PRODUCTS_MS_HOST=
+# PRODUCTS_MS_PORT=
